--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,13 @@
 body {
   font-family: var(--font-family);
   background: var(--color-bg);
-  color: var(--color-text)
+  color: var(--color-text);
+  position: relative;
 }
 
 footer {
-    margin-top: 20px;
-    border-top: 1px solid var(--color-other);
+  margin-top: 20px;
+  border-top: 1px solid var(--color-other);
 }
 
 .navbar a {
@@ -96,7 +97,6 @@ footer {
   border-bottom: 1px solid var(--color-other);
 }
 
-
 .header-text span {
   position: relative;
   animation: move-text 0.75s forwards;
@@ -105,9 +105,9 @@ footer {
 }
 
 .heroImage {
-   max-width: 500px;
-   height: 500px;
-   width: 100%;
+  max-width: 500px;
+  height: 500px;
+  width: 100%;
 }
 
 @keyframes move-text {
@@ -115,7 +115,7 @@ footer {
     bottom: -0.2em;
     opacity: 1;
   }
-  
+
   50% {
     bottom: 0.2em;
   }
@@ -136,17 +136,21 @@ footer {
 }
 
 .projectCard {
+  background-color: #f5f5f5;
   transform: scale(1, 1);
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
   transition: 0.3s all ease-in-out;
   cursor: pointer;
-  cursor: pointer;
   margin-top: 10px;
-  border-radius: 10px;
-  box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+  border-radius: 5px;
+  box-shadow: -0px 0px 5px 0px rgba(0, 0, 0, 0.33);
   margin-right: 30px;
   max-width: 370px;
-  height: 558px;
+  height: 400px;
   width: 100%;
 }
 
@@ -154,34 +158,21 @@ footer {
   transform: scale(1.1, 1.1);
 }
 
-.projectCard:hover .project-detail-hover {
+.projectCard:hover {
   transform: translateY(0px);
   opacity: 1;
 }
 
-.project-detail {
-  position: absolute;
-  display: flex;
-  font-family: var(--font-family);
-  flex-direction: column;
-  padding: 30px;
-  max-height: 557px;
-  height: 100%;
-  justify-content: center;
-  align-items: center;
-  bottom: 1px;
+.projectImg {
+  width: 100%;
+  height: 300px;
+  margin: auto;
+  object-fit: cover;
 }
 
-.project-detail:hover {
-  background: rgba(0, 0, 0, 0.5);
-}
-
-.project-detail-hover {
-  transform: translateY(80px);
-  transition: 0.5s;
-  text-align: center;
-  color: var(--color-nav);
-  opacity: 0;
+.project {
+  width: 60%;
+  height: 600px;
 }
 
 .right-arrow,
@@ -243,12 +234,11 @@ article {
   }
 }
 
-
 .right {
   white-space: nowrap;
   position: absolute;
-  top:2em;
-  opacity: .4;
+  top: 2em;
+  opacity: 0.4;
   text-transform: uppercase;
 }
 
@@ -277,82 +267,82 @@ article {
   }
 }
 
-
-@keyframes early 
-{ from { opacity:1; } to { opacity:0; } }
+@keyframes early {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
 
 .early {
-    animation:fadeIn ease-in 1; /* call our keyframe named fadeIn, use animation ease-in and repeat it only 1 time */
+  animation: fadeIn ease-in 1; /* call our keyframe named fadeIn, use animation ease-in and repeat it only 1 time */
 
-    animation-fill-mode:forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
+  animation-fill-mode: forwards; /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
 
-    animation-duration:1s;
-    animation-delay: 1.5s
+  animation-duration: 1s;
+  animation-delay: 1.5s;
 }
 
 .testimonial {
-    width: 1000px;
-    height: 400px;
+  width: 1000px;
+  height: 400px;
 }
 
 .footer-icons a {
-    font-size: 20px;
-    color: var(--color-banner);
-    text-align: center;
+  font-size: 20px;
+  color: var(--color-banner);
+  text-align: center;
 }
 
 .footer-icons a:hover {
-    color: #2196f3;
-    animation-name: footer-icons;
-    animation-duration: 4s;
+  color: #2196f3;
+  animation-name: footer-icons;
+  animation-duration: 4s;
 }
 
 @keyframes example {
-    from { font-size: 20px;}
-  to {font-size: 25px;}
+  from {
+    font-size: 20px;
+  }
+  to {
+    font-size: 25px;
+  }
 }
 
-
 @media only screen and (max-width: 768px) {
-    
-    .heroImage {
-       display:none;
-   }
+  .heroImage {
+    display: none;
+  }
 
-    
-    .footer-logo {
-        display: none;
-    }
+  .footer-logo {
+    display: none;
+  }
 
   .projectCard {
     margin-right: 0;
     max-width: 280px;
-    height: auto;
+    height: 250px;
     width: 100%;
   }
 
-  .project-detail {
-    padding: 10px;
-    bottom: 1px;
-  }
-    
-
-  .project-detail-hover {
-    transform: translateY(40px);
+  .projectImg {
+    max-height: 200px;
   }
 
-  .ProjectPics {
-    height: 100%;
-    width: 100%;
+  .project {
+    width: 90%;
+    height: 500px;
   }
-    
+
   .about-icon {
-  font-size: 60px;
+    font-size: 60px;
   }
 }
 
 @media only screen and (max-width: 1024px) {
-.testimonial {
+  .testimonial {
     width: 800px;
   }
 }
